--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="app-header">
-        <h1>🇯🇵 東京-富士山自駕行 🚗</h1>
+        <h1>王小棠的東京生日之旅 🐱</h1>
     </header>
 
     <main class="content-container">
@@ -257,3 +257,4 @@
     </script>
 </body>
 </html>
+
