--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>東京自駕旅遊小工具</title>
+    <title>tokyo</title>
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="style.css">
     <meta name="theme-color" content="#ffffff">
@@ -257,4 +257,5 @@
     </script>
 </body>
 </html>
+
 
