--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li>淺草寺 / 仲見世商店街</li>
                     <li>合羽橋道具街</li>
                     <li>秋葉原</li>
-                    <li>晴空塔。</li>
+                    <li>晴空塔</li>
                 </ul>
                 
             </div>
@@ -265,6 +265,7 @@
     </script>
 </body>
 </html>
+
 
 
 
