--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         </section>
 
         <section id="day-1-1" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/outlet.jpg');">
-                <p>上野</p></div>
+            <div class="day-card current-vibe-card" style="background-image: url('images/fuji.jpg');">
+                <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="1/1">
                 <div class="weather-info">☀️ 1/1 御殿場市 | 天氣：晴朗，5°C</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
@@ -142,8 +142,8 @@
         </section>
 
         <section id="day-1-4" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/airport.jpg');">
-                <p>✈️ 回家</p></div>
+            <div class="day-card current-vibe-card" style="background-image: url('images/home.jpg');">
+                <p>Home</p></div>
             <div class="day-card detail-card" data-date="1/4">
                 <div class="weather-info">🐘 1/4 上野 | 天氣：晴朗，11°C</div>
                 <h2>🗓️ 1/4 回家</h2>
@@ -388,4 +388,5 @@
     </script>
 </body>
 </html>
+
 
