--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="content-container">
         <section id="day-12-27" class="itinerary-day active-page">
             <div class="day-card current-vibe-card" 
-                 style="background-image: url('images/tokyo-skytree.jpg');">
+                 style="background-image: url('image/tokyo-skytree.jpg');">
                 <p>淺草</p>
             </div>
             
@@ -43,7 +43,7 @@
 
         <section id="day-12-28" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" 
-                 style="background-image: url('images/disney-sea.jpg');">
+                 style="background-image: url('image/disney-sea.jpg');">
                 <p>🎢 Disney Sea</p>
             </div>
             <div class="day-card detail-card" data-date="12/28">
@@ -60,7 +60,7 @@
 
         <section id="day-12-29" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" 
-                 style="background-image: url('images/shibuya-sky.jpg');">
+                 style="background-image: url('image/shibuya-sky.jpg');">
                 <p>🗼 澀谷・新宿</p>
             </div>
             <div class="day-card detail-card" data-date="12/29">
@@ -80,7 +80,7 @@
         </section>
         
         <section id="day-12-30" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/gotokuji.jpg');">
+            <div class="day-card current-vibe-card" style="background-image: url('image/gotokuji.jpg');">
                 <p>豪德寺</p></div>
             <div class="day-card detail-card" data-date="12/30">
                 <div class="weather-info">🐱 12/30 豪德寺 | 天氣：晴朗，13°C</div>
@@ -93,7 +93,7 @@
         </section>
 
         <section id="day-12-31" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/fuji.jpg');">
+            <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="12/31">
                 <div class="weather-info">🗻 12/31 富士山 | 天氣：多雲，5°C</div>
@@ -106,7 +106,7 @@
         </section>
 
         <section id="day-1-1" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/fuji.jpg');">
+            <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="1/1">
                 <div class="weather-info">☀️ 1/1 御殿場市 | 天氣：晴朗，5°C</div>
@@ -120,7 +120,7 @@
         </section>
 
         <section id="day-1-2" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/kamakura.jpg');">
+            <div class="day-card current-vibe-card" style="background-image: url('image/kamakura.jpg');">
                 <p>🌊 鎌倉</p></div>
             <div class="day-card detail-card" data-date="1/2">
                 <div class="weather-info">🌊 1/2 鎌倉市 | 天氣：多雲轉晴，10°C</div>
@@ -131,7 +131,7 @@
         </section>
 
         <section id="day-1-3" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/ueno.jpg');"><p>🐘 上野</p></div>
+            <div class="day-card current-vibe-card" style="background-image: url('image/ueno.jpg');"><p>🐘 上野</p></div>
             <div class="day-card detail-card" data-date="1/3">
                 <div class="weather-info">🐘 1/3 上野 | 天氣：晴朗，11°C</div>
                 <h2>🗓️ 1/3 上野 (文化與購物)</h2>
@@ -142,7 +142,7 @@
         </section>
 
         <section id="day-1-4" class="itinerary-day hidden">
-            <div class="day-card current-vibe-card" style="background-image: url('images/home.jpg');">
+            <div class="day-card current-vibe-card" style="background-image: url('image/home.jpg');">
                 <p>Home</p></div>
             <div class="day-card detail-card" data-date="1/4">
                 <div class="weather-info">🐘 1/4 上野 | 天氣：晴朗，11°C</div>
@@ -388,5 +388,6 @@
     </script>
 </body>
 </html>
+
 
 
