--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="day-12-27" class="itinerary-day active-page">
             <div class="day-card current-vibe-card" 
                  style="background-image: url('image/tokyo-skytree.jpg');">
-                <p>淺草</p>
+                <p>淺草 あさくさ</p>
             </div>
             
             <div class="day-card detail-card" data-date="12/27">
@@ -61,7 +61,7 @@
         <section id="day-12-29" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" 
                  style="background-image: url('image/shibuya-sky.jpg');">
-                <p>🗼 澀谷・新宿</p>
+                <p> 澀谷・新宿</p>
             </div>
             <div class="day-card detail-card" data-date="12/29">
                 <div class="weather-info">
@@ -388,6 +388,7 @@
     </script>
 </body>
 </html>
+
 
 
 
