--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <div class="weather-info">
                     ☁️ 12/27 淺草 | 天氣：多雲，14°C
                 </div>
-                <h2>🗓️ 12/27 淺草、秋葉原</h2>
+                <h2>🗓️ 12/27 淺草</h2>
                 <p><strong>住宿:</strong> 花築淺草和心飯店</p>
                 
-                <h3>📍 景點：</h3>
+                <h3>📍 行程：</h3>
                 <ul>
                     <li>淺草寺 / 仲見世商店街</li>
                     <li>合羽橋道具街</li>
@@ -61,7 +61,7 @@
         <section id="day-12-29" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" 
                  style="background-image: url('image/shibuya-sky.jpg');">
-                <p> 澀谷・新宿</p>
+                <p> 新宿・澀谷</p>
             </div>
             <div class="day-card detail-card" data-date="12/29">
                 <div class="weather-info">
@@ -111,9 +111,9 @@
             <div class="day-card detail-card" data-date="1/1">
                 <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：晴朗，5°C</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
-                <h3> 住宿</h3>
-                <p>Hotel Apreton</p>               
-                 <h3>📍 河口湖周邊景點：</h3>
+                <p><strong>住宿:</strong> Hotel Apreton</p>
+                            
+                <h3>📍 河口湖周邊景點：</h3>
                 <ul><li>忍野八海</li><li>新倉山淺間公園</li><li>吉田本町商店街</li></ul>
                 <button class="nav-button" data-location="Hotel Apreton">導航到 Hotel Apreton</button>
             </div>
@@ -166,8 +166,10 @@
             <div class="info-card day-card">
                 <h3>✈️ 航班資訊</h3>
                 <ul>
-                    <li>12/27 TPE-NRT:06:10-10:35</li>
-                    <li>01/04 NRT-TPE:11:25-14:45</li>
+                    <li>12/27 IT200 
+                        TPE-NRT:06:10-10:35</li>
+                    <li>01/04 
+                        IT201 NRT-TPE:11:25-14:45</li>
                 </ul>
             </div>
 
@@ -388,7 +390,6 @@
     </script>
 </body>
 </html>
-
 
 
 
