--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p>淺草 あさくさ</p>
             </div>
             
-                        <div class="day-card detail-card" data-date="12/27" data-city="Asakusa">
+                        <div class="day-card detail-card" data-date="12/27" data-city="Tokyo">
                 <div class="weather-info">
-                    ☁️ 12/27 淺草 | 天氣：多雲，14°C
+                    ☁️ 12/27 淺草 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 12/27 淺草</h2>
                 <p><strong>住宿:</strong> 花築淺草和心飯店</p>
@@ -46,9 +46,9 @@
                  style="background-image: url('image/disney-sea.jpg');">
                 <p>🎢 Disney Sea</p>
             </div>
-                        <div class="day-card detail-card" data-date="12/28" data-city="Maihama">
+                        <div class="day-card detail-card" data-date="12/28" data-city="Tokyo">
                 <div class="weather-info">
-                    🎢 12/28 disney-Sea | 天氣：晴朗，13°C
+                    🎢 12/28 disney-Sea | 天氣：載入中...
                 </div>
                 <h2>🗓️ 12/28 disney-Sea </h2>
                 <p><strong>🚨 交通提醒:</strong> 從淺草搭地鐵轉JR京葉線至舞濱站，請提早出發。</p>
@@ -65,7 +65,7 @@
             </div>
                         <div class="day-card detail-card" data-date="12/29" data-city="Shibuya">
                 <div class="weather-info">
-                    ☀️ 12/29 新宿・澀谷 | 天氣：多雲時晴，12°C
+                    ☀️ 12/29 新宿・澀谷 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 12/29 新宿、澀谷、東京鐵塔</h2>
                 
@@ -82,8 +82,8 @@
         <section id="day-12-30" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/gotokuji.jpg');">
                 <p>豪德寺</p></div>
-                        <div class="day-card detail-card" data-date="12/30" data-city="Tokyo">
-                <div class="weather-info">🐱 12/30 豪德寺 | 天氣：晴朗，13°C</div>
+            <div class="day-card detail-card" data-date="12/30" data-city="Tokyo">
+                <div class="weather-info">🐱 12/30 豪德寺 | 天氣：載入中...</div>
                 <h2>🗓️ 12/30 招財貓豪德寺</h2>
                 <h3>🐱 豪德寺攻略：</h3>
                 <p>豪德寺是招財貓的起源地...</p>
@@ -95,8 +95,8 @@
         <section id="day-12-31" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
-                        <div class="day-card detail-card" data-date="12/31" data-city="Gotemba">
-                <div class="weather-info">🗻 12/31 富士山 | 天氣：多雲，5°C</div>
+            <div class="day-card detail-card" data-date="12/31" data-city="Gotemba">
+                <div class="weather-info">🗻 12/31 富士山 | 天氣：載入中...</div>
                 <h2>🗓️ 12/31 淺草 → 富士山-御殿場 </h2>
                 <p><strong> 住宿:</strong> Hotel Clad</p>
                 <h3>🚗 交通：</h3>
@@ -108,8 +108,8 @@
         <section id="day-1-1" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
-                        <div class="day-card detail-card" data-date="1/1" data-city="Kawaguchiko">
-                <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：晴朗，5°C</div>
+            <div class="day-card detail-card" data-date="1/1" data-city="Kawaguchiko">
+                <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：載入中...</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>
                             
@@ -122,8 +122,8 @@
         <section id="day-1-2" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/kamakura.jpg');">
                 <p>🌊 鎌倉</p></div>
-                        <div class="day-card detail-card" data-date="1/2" data-city="Kamakura">
-                <div class="weather-info">🌊 1/2 鎌倉市 | 天氣：多雲轉晴，10°C</div>
+            <div class="day-card detail-card" data-date="1/2" data-city="Kamakura">
+                <div class="weather-info">🌊 1/2 鎌倉市 | 天氣：載入中...</div>
                 <h2>🗓️ 1/2 鎌倉一日遊</h2>
                 <h3>📍 景點攻略：</h3>
                 <ul><li>鶴岡八幡宮</li><li>鎌倉大佛</li><li>小町通</li><li>江之電</li></ul>
@@ -132,8 +132,8 @@
 
         <section id="day-1-3" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/ueno.jpg');"><p>🐘 上野</p></div>
-                        <div class="day-card detail-card" data-date="1/3" data-city="Ueno">
-                <div class="weather-info">🐘 1/3 上野 | 天氣：晴朗，11°C</div>
+                        <div class="day-card detail-card" data-date="1/3" data-city="Tokyo">
+                <div class="weather-info">🐘 1/3 上野 | 天氣：載入中...</div>
                 <h2>🗓️ 1/3 上野</h2>
                 <p><strong>🚨 逛街:</strong>隨便逛逛 </p>
                 <h3>📍 景點/購物：</h3>
@@ -144,8 +144,8 @@
         <section id="day-1-4" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/home.jpg');">
                 <p>Home</p></div>
-                        <div class="day-card detail-card" data-date="1/4" data-city="Narita">
-                <div class="weather-info">🐘 1/4 上野 | 天氣：晴朗，11°C</div>
+            <div class="day-card detail-card" data-date="1/4" data-city="Narita">
+                <div class="weather-info">🐘 1/4 上野 | 天氣：載入中...</div>
                 <h2>🗓️ 1/4 回家</h2>
                 <p><strong>🚨 回程:</strong> 11:25 飛機，檢查行李</p>
                 <h3>📍 景點/購物：</h3>
@@ -216,7 +216,7 @@
     <script src="app.js"></script>
     
     <script>
-        // --- [新增天氣 API 串接邏輯] ---
+        // --- [天氣 API 串接邏輯] ---
         
         // 使用者提供的 OpenWeatherMap API 金鑰
         const API_KEY = '0a105245bb3204d9430443e75d49c05c'; 
@@ -232,7 +232,8 @@
             try {
                 const response = await fetch(url);
                 if (!response.ok) {
-                    console.error(`無法獲取 ${city} 的天氣：`, response.statusText);
+                    // 打印錯誤狀態碼以方便除錯
+                    console.error(`無法獲取 ${city} 的天氣 (HTTP 狀態碼: ${response.status})：`, response.statusText);
                     return null;
                 }
                 const data = await response.json();
@@ -248,7 +249,13 @@
          */
         function updateWeatherDisplay(detailCard, weatherData) {
             const weatherInfoDiv = detailCard.querySelector('.weather-info');
-            if (!weatherInfoDiv || !weatherData || !weatherData.main || !weatherData.weather || weatherData.weather.length === 0) return;
+            if (!weatherInfoDiv) return;
+
+            if (!weatherData || !weatherData.main || !weatherData.weather || weatherData.weather.length === 0) {
+                // 如果獲取失敗，顯示錯誤訊息
+                weatherInfoDiv.innerHTML = `<span style="color: red;">[天氣載入失敗]</span>`;
+                return;
+            }
 
             const temp = Math.round(weatherData.main.temp); // 溫度取整數
             const description = weatherData.weather[0].description; // 天氣描述
@@ -272,16 +279,15 @@
         async function loadAllWeather() {
             const detailCards = document.querySelectorAll('.day-card.detail-card');
             
-            detailCards.forEach(async (card) => {
+            for (const card of detailCards) {
                 const city = card.getAttribute('data-city');
                 if (city) {
-                    // 這裡使用 setTimeout 加上延遲，避免短時間內對 API 產生過多請求 (Rate Limit)
-                    // 免費方案限制是每分鐘 60 次
-                    await new Promise(resolve => setTimeout(resolve, 100)); 
+                    // 確保 API Key 有效且避免短時間內對 API 產生過多請求 (Rate Limit)
+                    await new Promise(resolve => setTimeout(resolve, 150)); // 增加延遲到 150ms
                     const weatherData = await fetchWeatherForCity(city);
                     updateWeatherDisplay(card, weatherData);
                 }
-            });
+            }
         }
 
         // DOM 載入後執行天氣查詢
@@ -456,8 +462,7 @@
             button.addEventListener('click', () => {
                 const location = button.getAttribute('data-location');
                 if (location) {
-                    // [修正：導航連結的編碼錯誤]
-                    window.open(`http://maps.google.com/?q=${encodeURIComponent(location)}`, '_blank');
+                    window.open(`https://www.google.com/search?q=http://maps.google.com/%3Fq%3D${encodeURIComponent(location)}`, '_blank');
                 }
             });
         });
