--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="content-container">
         <section id="day-12-27" class="itinerary-day active-page">
             <div class="day-card current-vibe-card" 
-                 style="background-image: url('image/tokyo-skytree.jpg');">
+                 style="background-image: url('image/asukuna.jpg');">
                 <p>淺草 あさくさ</p>
             </div>
             
@@ -60,7 +60,7 @@
 
         <section id="day-12-29" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" 
-                 style="background-image: url('image/shibuya-sky.jpg');">
+                 style="background-image: url('image/shibuya.jpg');">
                 <p> 新宿・澀谷</p>
             </div>
                         <div class="day-card detail-card" data-date="12/29" data-city="Shibuya">
@@ -84,7 +84,7 @@
                 <p>豪德寺</p></div>
             <div class="day-card detail-card" data-date="12/30" data-city="Tokyo">
                 <div class="weather-info">🐱 12/30 豪德寺 | 天氣：載入中...</div>
-                <h2>🗓️ 12/30 招財貓豪德寺</h2>
+                <h2>🗓️ 12/30 豪德寺</h2>
                 <h3>🐱 豪德寺攻略：</h3>
                 <p>豪德寺是招財貓的起源地...</p>
                 <h3>🍴 午餐</h3>
@@ -108,7 +108,7 @@
         <section id="day-1-1" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
-            <div class="day-card detail-card" data-date="1/1" data-city="Kawaguchiko">
+            <div class="day-card detail-card" data-date="1/1" data-city="Gotemba">
                 <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：載入中...</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>
@@ -470,3 +470,4 @@
     </script>
 </body>
 </html>
+
