--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <section id="day-12-29" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" 
-                 style="background-image: url('image/shibuya.jpg');">
+                 style="background-image: url('image/shibuya-sky.jpg');">
                 <p> 新宿・澀谷</p>
             </div>
                         <div class="day-card detail-card" data-date="12/29" data-city="Shibuya">
@@ -470,4 +470,5 @@
     </script>
 </body>
 </html>
+
 
