--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
     
     <main class="content-container">
         <section id="day-12-27" class="itinerary-day active-page">
-            <div class="day-card current-vibe-card" 
-                 style="background-image: url('image/asukuna.jpg');">
-                <p>淺草 あさくさ</p>
-            </div>
-            
+            <div class="day-card current-vibe-card" style="background-image: url('image/asukuna.jpg');">
+                <p>淺草 あさくさ</p></div>            
                         <div class="day-card detail-card" data-date="12/27" data-city="Tokyo">
                 <div class="weather-info">
                     ☁️ 12/27 淺草 | 天氣：載入中...
@@ -42,10 +39,8 @@
         </section>
 
         <section id="day-12-28" class="itinerary-day hidden">
-             <div class="day-card current-vibe-card" 
-                 style="background-image: url('image/disney-sea.jpg');">
-                <p>🎢 Disney Sea</p>
-            </div>
+             <div class="day-card current-vibe-card" style="background-image: url('image/disney-sea.jpg');">
+                <p>🎢 Disney Sea</p></div>
                         <div class="day-card detail-card" data-date="12/28" data-city="Tokyo">
                 <div class="weather-info">
                     🎢 12/28 disney-Sea | 天氣：載入中...
@@ -59,16 +54,11 @@
         </section>
 
         <section id="day-12-29" class="itinerary-day hidden">
-             <div class="day-card current-vibe-card" 
-                 style="background-image: url('image/shibuya-sky.jpg');">
-                <p> 新宿・澀谷</p>
-            </div>
-                        <div class="day-card detail-card" data-date="12/29" data-city="Shibuya">
-                <div class="weather-info">
-                    ☀️ 12/29 新宿・澀谷 | 天氣：載入中...
-                </div>
-                <h2>🗓️ 12/29 新宿、澀谷、東京鐵塔</h2>
-                
+             <div class="day-card current-vibe-card" style="background-image: url('image/shibuya-sky.jpg');">
+                <p>新宿・澀谷</p></div>       
+             <div class="day-card detail-card" data-date="12/29" data-city="Shibuya">
+                <div class="weather-info">☀️ 12/29 新宿・澀谷 | 天氣：載入中... </div>
+                <h2>🗓️ 12/29 新宿、澀谷、東京鐵塔</h2>                
                 <h3>📍 景點攻略：</h3>
                 <ul>
                     <li>明治神宮</li>
@@ -470,5 +460,6 @@
     </script>
 </body>
 </html>
+
 
 
