--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
 
         <section id="day-12-28" class="itinerary-day hidden">
-             <div class="day-card current-vibe-card" style="background-image: url('image/disney-sea.jpg');">
+             <div class="day-card current-vibe-card" style="background-image: url('image/sea.jpg');">
                 <p>🎢 Disney Sea</p></div>
                         <div class="day-card detail-card" data-date="12/28" data-city="Tokyo">
                 <div class="weather-info">
@@ -460,6 +460,7 @@
     </script>
 </body>
 </html>
+
 
 
 
