--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="day-card detail-card" data-date="12/30" data-city="Tokyo">
                 <div class="weather-info">🐱 12/30 豪德寺 | 天氣：載入中...</div>
                 <h2>🗓️ 12/30 豪德寺</h2>
-                <h3>🐱 豪德寺攻略：</h3>
+                <h3>🐱 豪德寺：</h3>
                 <p>豪德寺是招財貓的起源地...</p>
                 <h3>🍴 午餐</h3>
                 <p>看要吃啥</p>
@@ -86,8 +86,8 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="12/31" data-city="Gotemba">
-                <div class="weather-info">🗻 12/31 富士山 | 天氣：載入中...</div>
-                <h2>🗓️ 12/31 淺草 → 富士山-御殿場 </h2>
+                <div class="weather-info">🗻 12/31 富士山-御殿場 | 天氣：載入中...</div>
+                <h2>🗓️ 12/31 淺草 → 富士山 </h2>
                 <p><strong> 住宿:</strong> Hotel Clad</p>
                 <h3>🚗 交通：</h3>
                 <p>自駕從御殿場回上野約 1.5 - 2 小時</p>
@@ -101,8 +101,7 @@
             <div class="day-card detail-card" data-date="1/1" data-city="Gotemba">
                 <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：載入中...</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
-                <p><strong>住宿:</strong> Hotel Apreton</p>
-                            
+                <p><strong>住宿:</strong> Hotel Apreton</p>                            
                 <h3>📍 河口湖周邊景點：</h3>
                 <ul><li>忍野八海</li><li>新倉山淺間公園</li><li>吉田本町商店街</li></ul>
                 <button class="nav-button" data-location="Hotel Apreton">導航到 Hotel Apreton</button>
@@ -460,7 +459,6 @@
     </script>
 </body>
 </html>
-
 
 
 
