--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="day-12-27" class="itinerary-day active-page">
             <div class="day-card current-vibe-card" style="background-image: url('image/asukuna.jpg');">
                 <p>淺草 あさくさ</p></div>            
-                        <div class="day-card detail-card" data-date="12/27" data-city="Tokyo">
+                        <div class="day-card detail-card" data-date="12/27" data-city="Sumida">
                 <div class="weather-info">
                     ☁️ 12/27 淺草 | 天氣：載入中...
                 </div>
@@ -41,7 +41,7 @@
         <section id="day-12-28" class="itinerary-day hidden">
              <div class="day-card current-vibe-card" style="background-image: url('image/sea.jpg');">
                 <p>🎢 Disney Sea</p></div>
-                        <div class="day-card detail-card" data-date="12/28" data-city="Tokyo">
+                        <div class="day-card detail-card" data-date="12/28" data-city="Urayasu">
                 <div class="weather-info">
                     🎢 12/28 disney-Sea | 天氣：載入中...
                 </div>
@@ -72,7 +72,7 @@
         <section id="day-12-30" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/gotokuji.jpg');">
                 <p>豪德寺</p></div>
-            <div class="day-card detail-card" data-date="12/30" data-city="Tokyo">
+            <div class="day-card detail-card" data-date="12/30" data-city="Setagaya">
                 <div class="weather-info">🐱 12/30 豪德寺 | 天氣：載入中...</div>
                 <h2>🗓️ 12/30 豪德寺</h2>
                 <h3>🐱 豪德寺：</h3>
@@ -98,7 +98,7 @@
         <section id="day-1-1" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
-            <div class="day-card detail-card" data-date="1/1" data-city="Gotemba">
+            <div class="day-card detail-card" data-date="1/1" data-city="Fujikawaguchiko">
                 <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：載入中...</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>                            
@@ -121,7 +121,7 @@
 
         <section id="day-1-3" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/ueno.jpg');"><p>🐘 上野</p></div>
-                        <div class="day-card detail-card" data-date="1/3" data-city="Tokyo">
+                        <div class="day-card detail-card" data-date="1/3" data-city="Taito">
                 <div class="weather-info">🐘 1/3 上野 | 天氣：載入中...</div>
                 <h2>🗓️ 1/3 上野</h2>
                 <p><strong>🚨 逛街:</strong>隨便逛逛 </p>
@@ -467,6 +467,7 @@
     </script>
 </body>
 </html>
+
 
 
 
