--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/asukuna.jpg');">
                 <p>淺草 あさくさ</p></div>            
                         <div class="day-card detail-card" data-date="12/27" data-city="Sumida">
-                <div class="weather-info">
-                    ☁️ 12/27 淺草 | 天氣：載入中...
-                </div>
+                <div class="weather-info">淺草 | 天氣：載入中...</div>
                 <h2>🗓️ 12/27 淺草</h2>
                 <p><strong>住宿:</strong> 花築淺草和心飯店</p>
                 
@@ -42,9 +40,7 @@
              <div class="day-card current-vibe-card" style="background-image: url('image/sea.jpg');">
                 <p>🎢 Disney Sea</p></div>
                         <div class="day-card detail-card" data-date="12/28" data-city="Urayasu">
-                <div class="weather-info">
-                    🎢 12/28 disney-Sea | 天氣：載入中...
-                </div>
+                <div class="weather-info">disney-Sea | 天氣：載入中...</div>
                 <h2>🗓️ 12/28 disney-Sea </h2>
                 <p><strong>🚨 交通提醒:</strong> 從淺草搭地鐵轉JR京葉線至舞濱站，請提早出發。</p>
                 
@@ -57,7 +53,7 @@
              <div class="day-card current-vibe-card" style="background-image: url('image/shibuya-sky.jpg');">
                 <p>新宿・澀谷</p></div>       
              <div class="day-card detail-card" data-date="12/29" data-city="Shibuya">
-                <div class="weather-info">☀️ 12/29 新宿・澀谷 | 天氣：載入中... </div>
+                <div class="weather-info">新宿・澀谷 | 天氣：載入中... </div>
                 <h2>🗓️ 12/29 新宿、澀谷、東京鐵塔</h2>                
                 <h3>📍 景點攻略：</h3>
                 <ul>
@@ -73,7 +69,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/gotokuji.jpg');">
                 <p>豪德寺</p></div>
             <div class="day-card detail-card" data-date="12/30" data-city="Setagaya">
-                <div class="weather-info">🐱 12/30 豪德寺 | 天氣：載入中...</div>
+                <div class="weather-info">豪德寺 | 天氣：載入中...</div>
                 <h2>🗓️ 12/30 豪德寺</h2>
                 <h3>🐱 豪德寺：</h3>
                 <p>豪德寺是招財貓的起源地...</p>
@@ -86,7 +82,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="12/31" data-city="Gotemba">
-                <div class="weather-info">🗻 12/31 富士山-御殿場 | 天氣：載入中...</div>
+                <div class="weather-info">富士山-御殿場 | 天氣：載入中...</div>
                 <h2>🗓️ 12/31 淺草 → 富士山 </h2>
                 <p><strong> 住宿:</strong> Hotel Clad</p>
                 <h3>🚗 交通：</h3>
@@ -99,7 +95,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/fuji.jpg');">
                 <p>🗻 富士山</p></div>
             <div class="day-card detail-card" data-date="1/1" data-city="Fujikawaguchiko">
-                <div class="weather-info">☀️ 1/1 富士山-河口湖 | 天氣：載入中...</div>
+                <div class="weather-info">富士山-河口湖 | 天氣：載入中...</div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>                            
                 <h3>📍 河口湖周邊景點：</h3>
@@ -112,7 +108,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/kamakura.jpg');">
                 <p>🌊 鎌倉</p></div>
             <div class="day-card detail-card" data-date="1/2" data-city="Kamakura">
-                <div class="weather-info">🌊 1/2 鎌倉市 | 天氣：載入中...</div>
+                <div class="weather-info">鎌倉市 | 天氣：載入中...</div>
                 <h2>🗓️ 1/2 鎌倉一日遊</h2>
                 <h3>📍 景點攻略：</h3>
                 <ul><li>鶴岡八幡宮</li><li>鎌倉大佛</li><li>小町通</li><li>江之電</li></ul>
@@ -122,7 +118,7 @@
         <section id="day-1-3" class="itinerary-day hidden">
             <div class="day-card current-vibe-card" style="background-image: url('image/ueno.jpg');"><p>🐘 上野</p></div>
                         <div class="day-card detail-card" data-date="1/3" data-city="Taito">
-                <div class="weather-info">🐘 1/3 上野 | 天氣：載入中...</div>
+                <div class="weather-info">上野 | 天氣：載入中...</div>
                 <h2>🗓️ 1/3 上野</h2>
                 <p><strong>🚨 逛街:</strong>隨便逛逛 </p>
                 <h3>📍 景點/購物：</h3>
@@ -134,7 +130,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/home.jpg');">
                 <p>Home</p></div>
             <div class="day-card detail-card" data-date="1/4" data-city="Narita">
-                <div class="weather-info">🐘 1/4 上野 | 天氣：載入中...</div>
+                <div class="weather-info">成田機場 | 天氣：載入中...</div>
                 <h2>🗓️ 1/4 回家</h2>
                 <p><strong>🚨 回程:</strong> 11:25 飛機，檢查行李</p>
                 <h3>📍 景點/購物：</h3>
@@ -155,10 +151,10 @@
             <div class="info-card day-card">
                 <h3>✈️ 航班資訊</h3>
                 <ul>
-                    <li>12/27 IT200 
-                        TPE-NRT:06:10-10:35</li>
-                    <li>01/04 
-                        IT201 NRT-TPE:11:25-14:45</li>
+                    <li>12/27 IT200</li>
+                    <li>TPE-NRT:06:10-10:35</li>
+                    <li>01/04 IT201</li>
+                    <li>NRT-TPE:11:25-14:45</li>
                 </ul>
             </div>
 
@@ -467,7 +463,6 @@
     </script>
 </body>
 </html>
-
 
 
 
