--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>淺草 あさくさ</p></div>            
                         <div class="day-card detail-card" data-date="12/27" data-city="Sumida">
                 <div class="weather-info">
-                  淺草 | 天氣：載入中...
+                  12/27 淺草 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 12/27 淺草</h2>
                 <p><strong>住宿:</strong> 花築淺草和心飯店</p>
@@ -465,6 +465,7 @@
     </script>
 </body>
 </html>
+
 
 
 
