--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <div class="day-card current-vibe-card" style="background-image: url('image/asukuna.jpg');">
                 <p>淺草 あさくさ</p></div>            
                         <div class="day-card detail-card" data-date="12/27" data-city="Sumida">
-                <div class="weather-info">
-                  12/27 淺草 | 天氣：載入中...
-                </div>
+                <div class="weather-info">12/27 淺草 | 天氣：載入中...</div>
                 <h2>🗓️ 12/27 淺草</h2>
                 <p><strong>住宿:</strong> 花築淺草和心飯店</p>
                 
@@ -465,6 +463,7 @@
     </script>
 </body>
 </html>
+
 
 
 
