--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <h3>📍 行程：</h3>
                 <ul>
                     <li>
-                        <button id="narita-guide-button" class="action-button">
-                            ✈️ 11:00 成田機場往淺草 (交通攻略)
-                        </button>
+                        <a id="narita-guide-button" class="action-button">
+                            11:00 成田機場往淺草
+                        </a>
                     </li>
                     <li>淺草寺 / </li>
                     <li>仲見世商店街</li>
