--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li>
                         <a id="narita-guide-button" class="action-button">
-                            11:00 成田機場往淺草
+                           <strong> 11:00 成田機場往淺草</strong> 
                         </a>
                     </li>
                     <li>淺草寺 / </li>
@@ -548,3 +548,4 @@
     </script>
 </body>
 </html>
+
