--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li>
                         <a id="narita-guide-button" class="action-button">
-                            11:00 成田機場->淺草
+                            <strong>11:00 成田機場->淺草</strong>
                         </a>
                     </li>
                     <li>淺草寺</li>
@@ -542,3 +542,4 @@
     </script>
 </body>
 </html>
+
