--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                 <h2>🗓️ 12/31 淺草 → 富士山 </h2>
                 <p><strong> 住宿:</strong> Hotel Clad</p>
                 <h3>🚗 交通：</h3>
-                <p>自駕從御殿場回上野約 1.5 - 2 小時</p>
+                <p>取車地點:NIPPON租車公司 TX淺草</p>
+                <p>時間:12/31 08:00-1/1 20:00</p>
+                <p>自駕到hotel clad約 1.5 - 2 小時</p>
                 <button class="nav-button" data-location="Hotel Clad">導航到 Hotel Clad </button>
             </div>
         </section>
@@ -546,4 +548,5 @@
     </script>
 </body>
 </html>
+
 
