--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <h2>🗓️ 12/31 淺草 → 富士山 </h2>
                 <p><strong> 住宿:</strong> Hotel Clad</p>
                 <h3>🚗 交通：</h3>
-                <p>取車地點:NIPPON租車公司 TX淺草 (TEL:050-1712-2596)
+                <p>取車地點:NIPPON租車公司 TX淺草
                     東京都台東区西浅草3-27-4</p>
                 <p>時間:12/31 08:00-1/1 20:00</p>
                 <p>自駕到hotel clad約 1.5 - 2 小時</p>
@@ -172,7 +172,8 @@
                 <h3>💰 旅遊費用總覽</h3>
                 <ul>
                     <li>機票總計: <strong>28,856</strong> (13478 + 15078)</li>
-                    <li>住宿總計: <strong>44,274</strong> (19946 + 13221 + 11107)</li>            
+                    <li>住宿總計: <strong>44,274</strong> (19946 + 13221 + 11107)</li>
+                    <li>租車總計: <strong>¥22,100</strong></li> 
                 </ul>
             </div>
 
@@ -549,6 +550,7 @@
     </script>
 </body>
 </html>
+
 
 
 
