--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <h2>🗓️ 12/27 淺草</h2>
                 <p>住宿:花築淺草和心飯店</p>              
-                <h3>📍 行程：</h3>
+                <h3>📍 行程</h3>
                 <ul>
                     <li>
                         <a id="narita-guide-button" class="action-button">
@@ -52,7 +52,7 @@
                     12/28 新宿・澀谷 | 天氣：載入中... 
                 </div>
                 <h2>🗓️ 12/28 新宿、澀谷、東京鐵塔</h2>             
-                <h3>📍 景點攻略：</h3>
+                <h3>📍 行程</h3>
                 <ul>
                     <li>明治神宮</li>
                     <li>澀谷 Shibuya Sky</li>
@@ -85,10 +85,13 @@
                     12/30 豪德寺 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 12/30 豪德寺</h2>
-                <h3>🐱 豪德寺：</h3>
-                <p>豪德寺是招財貓的起源地...</p>
-                <h3>🍴 午餐</h3>
-                <p>看要吃啥</p>
+                <h3>📍 交通</h3>
+                <p>淺草（G19）→ 銀座線（G）→ 澀谷（G01）</p>
+                <p>1.澀谷 → 三軒茶屋 線路：東急田園都市線 Den-en-toshi Line</p>
+                <p>2.三軒茶屋 → 宮の坂 線路：東急世田谷線 Setagaya Line（小電車）</p>
+                <p>3.宮の坂站 → 豪德寺</p>
+                <h4>📍 交通</h4>
+                <p>4.可以再回澀谷逛逛</p>
             </div>
         </section>
 
@@ -119,8 +122,11 @@
                 </div>
                 <h2>🗓️ 1/1 富士山 → 上野 </h2>
                 <p><strong>住宿:</strong> Hotel Apreton</p>                        
-                <h3>📍 河口湖周邊景點：</h3>
-                <ul><li>忍野八海</li><li>新倉山淺間公園</li><li>吉田本町商店街</li></ul>
+                <h3>📍 行程</h3>
+                <ul><li>忍野八海</li>
+                    <li>新倉山淺間公園</li>
+                    <li>吉田本町商店街</li>
+                </ul>
                 <button class="nav-button" data-location="Hotel Apreton">導航到 Hotel Apreton</button>
             </div>
         </section>
@@ -133,8 +139,12 @@
                     1/2 鎌倉市 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 1/2 鎌倉</h2>
-                <h3>📍 景點：</h3>
-                <ul><li>鶴岡八幡宮</li><li>鎌倉大佛</li><li>小町通</li><li>江之電</li></ul>
+                <h3>📍 行程</h3>
+                <ul><li>鶴岡八幡宮</li>
+                    <li>鎌倉大佛</li>
+                    <li>小町通</li>
+                    <li>江之電</li>
+                </ul>
             </div>
         </section>
 
@@ -146,9 +156,12 @@
                     1/3 上野 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 1/3 上野</h2>
-                <p><strong>🚨 逛街:</strong>隨便逛逛 </p>
-                <h3>📍 景點/購物：</h3>
-                <ul><li>上野公園:</li><li>阿美橫丁 </li><li>上野動物園</li></ul>
+                <h3>📍 行程</h3>
+                <ul>
+                    <li>阿美橫丁 </li>
+                    <li>上野公園:</li>                    
+                    <li>上野 Yodobashi Camera</li>
+                </ul>
             </div>
         </section>
 
@@ -160,9 +173,13 @@
                     1/4 成田機場 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 1/4 回家</h2>
+                
                 <p><strong>🚨 回程:</strong> 11:25 飛機，檢查行李</p>
-                <h3>📍 景點/購物：</h3>
-                <ul><li>機場周邊</li></ul>
+                <h3>📍 行程</h3>
+                <ul>
+                    <li>預計06:00起床前往機場</li>
+                    <li>機場周邊</li>
+                </ul>
             </div>
         </section>
         
@@ -550,6 +567,7 @@
     </script>
 </body>
 </html>
+
 
 
 
