--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@
                 <div class="weather-info">
                     12/29 disney-Sea | 天氣：載入中...
                 </div>
-                <h2>🗓️ 12/29 disney-Sea </h2>
-                <p><strong>🚨 交通提醒:</strong> 從淺草搭地鐵轉JR京葉線至舞濱站，請提早出發。</p>
-                
-                <h3>🚆 交通路線：</h3>
-                <p>淺草 (人形町站) → 日比谷線 (八丁堀站) → JR京葉線 → 舞濱站。</p>
+                <h2>🗓️ 12/29 disney-Sea </h2>                
+                <h3>🚆 交通：</h3>
+                <p>淺草 (人形町站) → 日比谷線 (八丁堀站) → JR京葉線 → 舞濱站</p>
             </div>
         </section>
        
@@ -85,13 +83,13 @@
                     12/30 豪德寺 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 12/30 豪德寺</h2>
-                <h3>📍 交通</h3>
+                <h3>🚆 交通</h3>
                 <p>淺草（G19）→ 銀座線（G）→ 澀谷（G01）</p>
                 <p>1.澀谷 → 三軒茶屋 線路：東急田園都市線 Den-en-toshi Line</p>
                 <p>2.三軒茶屋 → 宮の坂 線路：東急世田谷線 Setagaya Line（小電車）</p>
                 <p>3.宮の坂站 → 豪德寺</p>
-                <h4>📍 交通</h4>
-                <p>4.可以再回澀谷逛逛</p>
+                <h4>📍 行程</h4>
+                <p>可以再回澀谷逛逛</p>
             </div>
         </section>
 
@@ -567,6 +565,7 @@
     </script>
 </body>
 </html>
+
 
 
 
