--- a/index.html
+++ b/index.html
@@ -137,11 +137,13 @@
                     1/2 鎌倉市 | 天氣：載入中...
                 </div>
                 <h2>🗓️ 1/2 鎌倉</h2>
-                <h3>📍 行程</h3>
-                <ul><li>鶴岡八幡宮</li>
-                    <li>鎌倉大佛</li>
-                    <li>小町通</li>
-                    <li>江之電</li>
+                <h3>🚆 交通</h3>
+                <p>上野站 →（JR 上野東京 Line）→ 鎌倉站</p>                
+                <h4>📍 行程</h3>
+                <ul>
+                    <li>江之島</li>
+                    <li>灌籃高手平交道</li>
+                    <li>小町通</li>                    
                 </ul>
             </div>
         </section>
@@ -565,6 +567,7 @@
     </script>
 </body>
 </html>
+
 
 
 
