--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <h3>📍 行程</h3>
                 <ul>
                     <li>阿美橫丁 </li>
-                    <li>上野公園:</li>                    
+                    <li>上野公園</li>                    
                     <li>上野 Yodobashi Camera</li>
                 </ul>
             </div>
@@ -198,9 +198,9 @@
                 <h3>✈️ 航班資訊</h3>
                 <ul>
                     <li>12/27 IT200</li>
-                    <li>TPE-NRT:06:10-10:35</li>
+                    <p>TPE-NRT:06:10-10:35</p>
                     <li>01/04 IT201</li>
-                    <li>NRT-TPE:11:25-14:45</li>
+                    <p>NRT-TPE:11:25-14:45</p>
                 </ul>
             </div>
 
@@ -567,6 +567,7 @@
     </script>
 </body>
 </html>
+
 
 
 
