--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tokyo</title>
     <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="/icon-192x192.png">
     <link rel="stylesheet" href="style.css"> 
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -567,6 +568,7 @@
     </script>
 </body>
 </html>
+
 
 
 
