--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
                 </div>
                 <h2>🗓️ 12/28 新宿、澀谷、東京鐵塔</h2>             
                 <h3>📍 行程</h3>
-                <ul>
-                    <li>明治神宮</li>
-                    <li>澀谷 Shibuya Sky</li>
-                    <li>東京鐵塔</li>
+                <ul>                    
+                    <li>澀谷 Shibuya Sky</li>                    
                     <li>惠比壽</li>
+                    <li>明治神宮</li>
+                    <li>18:00 Ushigoro Ginza</li>
+                    <li>東京鐵塔</li>
                 </ul>
             </div>
         </section>
@@ -191,7 +192,7 @@
                 <ul>
                     <li>機票總計: <strong>28,856</strong> (13478 + 15078)</li>
                     <li>住宿總計: <strong>44,274</strong> (19946 + 13221 + 11107)</li>
-                    <li>租車總計: <strong>¥22,100</strong></li> 
+                    <li>租車總計: <strong>¥24,200</strong></li> 
                 </ul>
             </div>
 
@@ -568,6 +569,7 @@
     </script>
 </body>
 </html>
+
 
 
 
