--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
                             <strong>11:00 成田機場->淺草</strong>
                         </a>
                     </li>
-                    <li>淺草寺</li>
+                    <li>淺草炸肉餅</li>
+                    <li>淺草鰻魚鐵(國際通分店)</li>
                     <li>仲見世商店街</li>
-                    <li>合羽橋道具街:往晴空塔 田原町站 → 押上站</li>                    
-                    <li>晴空塔:往秋葉原 半藏門線（押上） → 銀座線（上野） → 秋葉原</li>
-                    <li>秋葉原</li>
+                    <li>淺草寺-雷門</li>
+                    <li>和泉屋 本店</li> 
+                    <li>淺草-藏前</li>
+                    <li>KURAMAE CANNELE</li>                    
+                    <li>proto 器とタカラモノ</li>
+                    <li>Tool Shop Nobori</li>                    
+                    <li>八十八良葉舍 淺草</li>
+                    <li>Chinya</li>
+                    <li>秋葉原 animate</li>
+                    <li>?Kissa Hangetsu</li>
+                    <li>?KONCENT</li>
+                    <li>?Hakujitsu</li>
                 </ul>
             </div>
         </section>
@@ -569,6 +579,7 @@
     </script>
 </body>
 </html>
+
 
 
 
