--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                             <strong>11:00 成田機場->淺草</strong>
                         </a>
                     </li>
-                    <li>淺草炸肉餅</li>
-                    <li>淺草鰻魚鐵(國際通分店)</li>
+                    <li>米久本店</li>
+                    <li>淺草炸肉餅</li>                    
                     <li>仲見世商店街</li>
                     <li>淺草寺-雷門</li>
                     <li>和泉屋 本店</li> 
@@ -46,7 +46,7 @@
                     <li>proto 器とタカラモノ</li>
                     <li>Tool Shop Nobori</li>                    
                     <li>八十八良葉舍 淺草</li>
-                    <li>Chinya</li>
+                    <li>淺草鰻魚鐵(國際通分店)</li>
                     <li>秋葉原 animate</li>
                     <li>?Kissa Hangetsu</li>
                     <li>?KONCENT</li>
@@ -579,6 +579,7 @@
     </script>
 </body>
 </html>
+
 
 
 
